--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Technical Fest of Ramniranjan Jhunjhunwala College" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 		<title>Tech Arena</title>
 	</head>
 	<body>
