--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+		<meta name="google-site-verification" content="UvomVLxg8xwY_2CBSw2NU8SwX56EHnKvkaODN1jOhi0" />
 		<title>Tech Arena</title>
 	</head>
 	<body>
