--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,34 @@
 		<link rel="icon" href="%PUBLIC_URL%/assets/logo.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Technical Fest of Ramniranjan Jhunjhunwala College" />
+		<meta name="description" content="Technical Fest of Ramniranjan Jhunjhunwala College ~ TechArena" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 		<meta name="google-site-verification" content="UvomVLxg8xwY_2CBSw2NU8SwX56EHnKvkaODN1jOhi0" />
-		<title>Tech Arena</title>
+		<!-- Open Graph Protocol  -->
+		<meta property="og:title" content="TechArena" />
+		<meta property="og:description" content="Technical Fest of Ramniranjan Jhunjhunwala College ~ TechArena" />
+		<meta property="og:type" content="/assets/logo.svg" />
+		<meta property="og:url" content="https://techarena.netlify.app/" />
+		<meta property="og:image" content="https://techarena.netlify.app/assets/logo.svg" />
+		<meta property="og:site_name" content="techarena" />
+		<!-- Open Graph Protocol Ends  -->
+		<title>Tech Arena | Technical Fest | Ramniranjan Jhunjhunwala College</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<!-- Schema Starts  -->
+		<script type="application/ld+json">
+			{
+				"@context": "http://schema.org",
+				"@type": "Person",
+				"name": "techarena",
+				"url": "https://techarena.netlify.app",
+				"sameAs": ["https://www.instagram.com/techarena2022/"]
+			}
+		</script>
+		<!-- schema ends -->
 	</body>
 </html>
